# pyneolink

./: .gitignore  .requirements  CHANGELOG.md  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.example.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: 00-index.md  01-core-map.md  02-connection-flow.md  03-authentication-and-encryption.md  04-baichuan-messages.md  05-internal-helpers.md  05-udp-p2p-transport.md  06-sd-card-downloads.md  07-media-and-streaming.md  08-motion-voice-and-controls.md
examples/: README.md  battery_example.py  camera_example.py  motion_example.py  record_example.py  sd_card_example.py  settings_example.py  stream_example.py  voice_example.py
pyneolink/: __init__.py  battery.py  bc.py  camera.py  cli.py  config.py  crypto.py  discovery.py  errors.py  media.py  motion.py  recorder.py  sd_card.py  stream_server.py  udp_transport.py  voice.py
pyneolink/core/: __init__.py  bc.py  crypto.py  discovery.py  media.py  state.py  udp_transport.py  xmlutil.py
pyneolink/core/const/: __init__.py  flags.py  msg.py  payloads.py
pyneolink/internal/: __init__.py  battery.py  camera.py  snapshot.py  voice.py
pyneolink/settings/: __init__.py  ir.py  pir.py
tests/: conftest.py  test_protocol.py
