[project]
name = "pyneolink"
version = "0.1.0"
description = "Experimental Python implementation of the Reolink/Neolink Baichuan bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
aes = ["cryptography>=42"]
voice = ["sounddevice>=0.4"]

[project.scripts]
pyneolink = "pyneolink.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
